@@ -22,7 +22,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.NavigableMap;
 import java.util.Optional;
-import java.util.Set;
+import java.util.SequencedSet;
 import java.util.TreeMap;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.log.LogManager;
@@ -89,8 +89,8 @@ public class BlockGraphModification {
     for (CFANode node : clone.nodes()) {
       String functionName = node.getFunction().getQualifiedName();
       allNodes.put(functionName, node);
-      if (node instanceof FunctionEntryNode) {
-        functionEntryNodes.put(functionName, (FunctionEntryNode) node);
+      if (node instanceof FunctionEntryNode functionEntryNode) {
+        functionEntryNodes.put(functionName, functionEntryNode);
       }
     }
     return new MutableCFA(functionEntryNodes, allNodes, clone.getMetadata());
@@ -239,7 +239,7 @@ public class BlockGraphModification {
     MappingInformation blockMapping =
         createMappingBetweenOriginalAndInstrumentedCFA(pOriginalCfa, pMutableCfa);
     ImmutableSet<CFANode> blockEnds =
-        transformedImmutableSetCopy(pBlockGraph.getNodes(), n -> n.getFinalLocation());
+        transformedImmutableSetCopy(pBlockGraph.getNodes(), BlockNode::getFinalLocation);
     ImmutableSet.Builder<CFANode> unableToAbstract = ImmutableSet.builder();
     ImmutableMap.Builder<CFANode, CFAEdge> abstractions = ImmutableMap.builder();
     for (CFANode originalBlockEnd : blockEnds) {
@@ -329,7 +329,7 @@ public class BlockGraphModification {
       CFA pOriginal, CFA pInstrumented) {
     record NodePair(CFANode n1, CFANode n2) {}
 
-    Set<CFANode> covered = new LinkedHashSet<>();
+    SequencedSet<CFANode> covered = new LinkedHashSet<>();
     ImmutableMap.Builder<CFAEdge, CFAEdge> originalToInstrumentedEdges = ImmutableMap.builder();
     ImmutableMap.Builder<CFANode, CFANode> originalToInstrumentedNodes = ImmutableMap.builder();
 
@@ -337,7 +337,7 @@ public class BlockGraphModification {
     waitlist.add(new NodePair(pOriginal.getMainFunction(), pInstrumented.getMainFunction()));
     originalToInstrumentedNodes.put(pOriginal.getMainFunction(), pInstrumented.getMainFunction());
     while (!waitlist.isEmpty()) {
-      NodePair pair = waitlist.remove(0);
+      NodePair pair = waitlist.removeFirst();
       CFANode originalNode = pair.n1();
       if (covered.contains(originalNode)) {
         continue;
@@ -346,7 +346,7 @@ public class BlockGraphModification {
       CFANode instrumentedNode = pair.n2();
       FluentIterable<CFAEdge> instrumentedOutgoing = CFAUtils.allLeavingEdges(instrumentedNode);
       FluentIterable<CFAEdge> originalOutgoing = CFAUtils.allLeavingEdges(originalNode);
-      Set<CFAEdge> foundCorrespondingEdges = new LinkedHashSet<>();
+      SequencedSet<CFAEdge> foundCorrespondingEdges = new LinkedHashSet<>();
       for (CFAEdge cfaEdge : originalOutgoing) {
         CFAEdge corresponding = findCorrespondingEdge(cfaEdge, instrumentedOutgoing);
         assertOrFail(
